eshop-PaC/k8s/cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-cartservice
spec:
  selector:
    matchLabels:
      app: eshop-cartservice
  template:
    metadata:
      labels:
        app: eshop-cartservice
    spec:
      containers:
        - name: eshop-cartservice
          image: 095522511846.dkr.ecr.us-east-1.amazonaws.com/eshop-cartservice:latest
          ports:
            - containerPort: 8091
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-cartservice
spec:
  type: ClusterIP
  selector:
    app: eshop-cartservice
  ports:
    - port: 8091
