eshop-PaC/k8s/currencyservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-currencyservice
spec:
  selector:
    matchLabels:
      app: eshop-currencyservice
  template:
    metadata:
      labels:
        app: eshop-currencyservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: eshop-currencyservice
          image: 095522511846.dkr.ecr.us-east-1.amazonaws.com/eshop-currencyservice:lastest
          ports:
          - containerPort: 8094
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-currencyservice
spec:
  type: ClusterIP
  selector:
    app: eshop-currencyservice
  ports:
    - port: 8094
      name: api
      targetPort: 8094
