eshop-PaC/k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:5.0-alpine
          ports:
          - containerPort: 6379
          volumeMounts:
          - mountPath: /data
            name: redis-data
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              cpu: 100m
              memory: 384Mi
      volumes:
        - name: redis-data
          emptyDir:
            {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
